@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2000-2012 Liferay, Inc. All rights reserved.
+ * Copyright (c) 2000-2013 Liferay, Inc. All rights reserved.
  *
  * This library is free software; you can redistribute it and/or modify it under
  * the terms of the GNU Lesser General Public License as published by the Free
@@ -26,6 +26,8 @@ import com.liferay.portal.kernel.log.Log;
 import com.liferay.portal.kernel.log.LogFactoryUtil;
 import com.liferay.portal.kernel.util.Base64;
 import com.liferay.portal.kernel.util.CharPool;
+import com.liferay.portal.kernel.util.Constants;
+import com.liferay.portal.kernel.util.ContentTypes;
 import com.liferay.portal.kernel.util.FileUtil;
 import com.liferay.portal.kernel.util.GetterUtil;
 import com.liferay.portal.kernel.util.Http;
@@ -36,24 +38,20 @@ import com.liferay.portal.kernel.util.ReleaseInfo;
 import com.liferay.portal.kernel.util.StringPool;
 import com.liferay.portal.kernel.util.StringUtil;
 import com.liferay.portal.kernel.util.Validator;
-import com.liferay.portal.security.pacl.PACLClassLoaderUtil;
+import com.liferay.portal.util.ClassLoaderUtil;
+import com.liferay.portal.util.PortalUtil;
 import com.liferay.portal.util.PropsUtil;
 import com.liferay.portal.util.PropsValues;
 import com.liferay.util.Encryptor;
 
-import java.io.BufferedReader;
 import java.io.File;
 import java.io.InputStream;
-import java.io.InputStreamReader;
-import java.io.OutputStream;
 
 import java.net.Inet4Address;
 import java.net.InetAddress;
-import java.net.InetSocketAddress;
 import java.net.NetworkInterface;
-import java.net.Proxy;
+import java.net.URI;
 import java.net.URL;
-import java.net.URLConnection;
 
 import java.security.Key;
 import java.security.KeyFactory;
@@ -79,6 +77,18 @@ import javax.crypto.KeyGenerator;
 import javax.servlet.http.HttpServletRequest;
 
 import org.apache.commons.io.IOUtils;
+import org.apache.http.HttpEntity;
+import org.apache.http.HttpHost;
+import org.apache.http.HttpResponse;
+import org.apache.http.auth.AuthScope;
+import org.apache.http.auth.UsernamePasswordCredentials;
+import org.apache.http.client.CredentialsProvider;
+import org.apache.http.client.methods.HttpPost;
+import org.apache.http.conn.ClientConnectionManager;
+import org.apache.http.conn.params.ConnRoutePNames;
+import org.apache.http.entity.ByteArrayEntity;
+import org.apache.http.impl.client.DefaultHttpClient;
+import org.apache.http.params.HttpParams;
 
 /**
  * @author Amos Fong
@@ -138,61 +148,44 @@ public class LicenseUtil {
 		}
 	}
 
+	/**
+	 * @deprecated As of 6.2.0, replaced by {@link PortalUtil#getComputerName()}
+	 */
 	public static String getHostName() {
-		if (_hostName == null) {
-			_hostName = StringPool.BLANK;
-
-			try {
-				Runtime runtime = Runtime.getRuntime();
-
-				Process process = runtime.exec("hostname");
-
-				BufferedReader bufferedReader = new BufferedReader(
-					new InputStreamReader(process.getInputStream()), 128);
-
-				_hostName = bufferedReader.readLine();
-
-				bufferedReader.close();
-			}
-			catch (Exception e) {
-				_log.error("Unable to read local server's host name");
-
-				_log.error(e, e);
-			}
-		}
-
-		return _hostName;
+		return PortalUtil.getComputerName();
 	}
 
 	public static Set<String> getIpAddresses() {
-		if (_ipAddresses == null) {
-			_ipAddresses = new HashSet<String>();
+		if (_ipAddresses != null) {
+			return new HashSet<String>(_ipAddresses);
+		}
 
-			try {
-				List<NetworkInterface> networkInterfaces = Collections.list(
-					NetworkInterface.getNetworkInterfaces());
+		_ipAddresses = new HashSet<String>();
 
-				for (NetworkInterface networkInterface : networkInterfaces) {
-					List<InetAddress> inetAddresses = Collections.list(
-						networkInterface.getInetAddresses());
+		try {
+			List<NetworkInterface> networkInterfaces = Collections.list(
+				NetworkInterface.getNetworkInterfaces());
 
-					for (InetAddress inetAddress : inetAddresses) {
-						if (inetAddress.isLinkLocalAddress() ||
-							inetAddress.isLoopbackAddress() ||
-							!(inetAddress instanceof Inet4Address)) {
+			for (NetworkInterface networkInterface : networkInterfaces) {
+				List<InetAddress> inetAddresses = Collections.list(
+					networkInterface.getInetAddresses());
 
-							continue;
-						}
+				for (InetAddress inetAddress : inetAddresses) {
+					if (inetAddress.isLinkLocalAddress() ||
+						inetAddress.isLoopbackAddress() ||
+						!(inetAddress instanceof Inet4Address)) {
 
-						_ipAddresses.add(inetAddress.getHostAddress());
+						continue;
 					}
+
+					_ipAddresses.add(inetAddress.getHostAddress());
 				}
 			}
-			catch (Exception e) {
-				_log.error("Unable to read local server's IP addresses");
+		}
+		catch (Exception e) {
+			_log.error("Unable to read local server's IP addresses");
 
-				_log.error(e, e);
-			}
+			_log.error(e, e);
 		}
 
 		return new HashSet<String>(_ipAddresses);
@@ -273,7 +266,7 @@ public class LicenseUtil {
 
 			String macAddress = matcher.group(1);
 
-			macAddress = macAddress.toLowerCase();
+			macAddress = StringUtil.toLowerCase(macAddress);
 			macAddress = macAddress.replace(CharPool.DASH, CharPool.COLON);
 			macAddress = macAddress.replace(CharPool.PERIOD, CharPool.COLON);
 
@@ -321,7 +314,7 @@ public class LicenseUtil {
 	public static Map<String, String> getServerInfo() {
 		Map<String, String> serverInfo = new HashMap<String, String>();
 
-		serverInfo.put("hostName", getHostName());
+		serverInfo.put("hostName", PortalUtil.getComputerName());
 		serverInfo.put("ipAddresses", StringUtil.merge(getIpAddresses()));
 		serverInfo.put("macAddresses", StringUtil.merge(getMacAddresses()));
 
@@ -434,8 +427,7 @@ public class LicenseUtil {
 	}
 
 	public static String sendRequest(String request) throws Exception {
-		InputStream inputStream = null;
-		OutputStream outputStream = null;
+		DefaultHttpClient defaultHttpClient = new DefaultHttpClient();
 
 		try {
 			String serverURL = LICENSE_SERVER_URL;
@@ -446,9 +438,9 @@ public class LicenseUtil {
 
 			serverURL += "osb-portlet/license";
 
-			URL url = new URL(serverURL);
+			URI uri = new URI(serverURL);
 
-			URLConnection connection = null;
+			HttpPost httpPost = new HttpPost(uri);
 
 			if (Validator.isNotNull(_PROXY_URL)) {
 				if (_log.isInfoEnabled()) {
@@ -457,34 +449,37 @@ public class LicenseUtil {
 							_PROXY_PORT);
 				}
 
-				Proxy proxy = new Proxy(
-					Proxy.Type.HTTP,
-					new InetSocketAddress(_PROXY_URL, _PROXY_PORT));
+				HttpHost httpHost = new HttpHost(_PROXY_URL, _PROXY_PORT);
 
-				connection = url.openConnection(proxy);
+				HttpParams httpParams = defaultHttpClient.getParams();
+
+				httpParams.setParameter(
+					ConnRoutePNames.DEFAULT_PROXY, httpHost);
 
 				if (Validator.isNotNull(_PROXY_USER_NAME)) {
-					String login =
-						_PROXY_USER_NAME + StringPool.COLON + _PROXY_PASSWORD;
+					CredentialsProvider credentialsProvider =
+						defaultHttpClient.getCredentialsProvider();
 
-					String encodedLogin = Base64.encode(login.getBytes());
-
-					connection.setRequestProperty(
-						"Proxy-Authorization", "Basic " + encodedLogin);
+					credentialsProvider.setCredentials(
+						new AuthScope(_PROXY_URL, _PROXY_PORT),
+						new UsernamePasswordCredentials(
+							_PROXY_USER_NAME, _PROXY_PASSWORD));
 				}
 			}
-			else {
-				connection = url.openConnection();
-			}
 
-			connection.setDoOutput(true);
+			ByteArrayEntity byteArrayEntity = new ByteArrayEntity(
+				_encryptRequest(serverURL, request));
 
-			outputStream = connection.getOutputStream();
+			byteArrayEntity.setContentType(ContentTypes.APPLICATION_JSON);
 
-			outputStream.write(_encryptRequest(serverURL, request));
+			httpPost.setEntity(byteArrayEntity);
+
+			HttpResponse httpResponse = defaultHttpClient.execute(httpPost);
+
+			HttpEntity httpEntity = httpResponse.getEntity();
 
 			String response = _decryptResponse(
-				serverURL, connection.getInputStream());
+				serverURL, httpEntity.getContent());
 
 			if (_log.isDebugEnabled()) {
 				_log.debug("Server response: " + response);
@@ -497,21 +492,10 @@ public class LicenseUtil {
 			return response;
 		}
 		finally {
-			try {
-				if (inputStream != null) {
-					inputStream.close();
-				}
-			}
-			catch (Exception e) {
-			}
+			ClientConnectionManager clientConnectionManager =
+				defaultHttpClient.getConnectionManager();
 
-			try {
-				if (outputStream != null) {
-					outputStream.close();
-				}
-			}
-			catch (Exception e) {
-			}
+			clientConnectionManager.shutdown();
 		}
 	}
 
@@ -535,10 +519,10 @@ public class LicenseUtil {
 		jsonObject.put("liferayVersion", ReleaseInfo.getBuildNumber());
 
 		if (Validator.isNull(productEntryName)) {
-			jsonObject.put("cmd", "QUERY");
+			jsonObject.put(Constants.CMD, "QUERY");
 		}
 		else {
-			jsonObject.put("cmd", "REGISTER");
+			jsonObject.put(Constants.CMD, "REGISTER");
 
 			if (productEntryName.startsWith("basic")) {
 				jsonObject.put("productEntryName", "basic");
@@ -561,7 +545,7 @@ public class LicenseUtil {
 				jsonObject.put("productEntryName", productEntryName);
 			}
 
-			jsonObject.put("hostName", getHostName());
+			jsonObject.put("hostName", PortalUtil.getComputerName());
 			jsonObject.put("ipAddresses", StringUtil.merge(getIpAddresses()));
 			jsonObject.put("macAddresses", StringUtil.merge(getMacAddresses()));
 			jsonObject.put("serverId", Arrays.toString(getServerIdBytes()));
@@ -577,17 +561,16 @@ public class LicenseUtil {
 		if (serverURL.startsWith(Http.HTTPS)) {
 			return StringUtil.read(inputStream);
 		}
-		else {
-			byte[] bytes = IOUtils.toByteArray(inputStream);
 
-			if ((bytes == null) || (bytes.length <= 0)) {
-				return null;
-			}
+		byte[] bytes = IOUtils.toByteArray(inputStream);
 
-			bytes = Encryptor.decryptUnencodedAsBytes(_symmetricKey, bytes);
-
-			return new String(bytes, StringPool.UTF8);
+		if ((bytes == null) || (bytes.length <= 0)) {
+			return null;
 		}
+
+		bytes = Encryptor.decryptUnencodedAsBytes(_symmetricKey, bytes);
+
+		return new String(bytes, StringPool.UTF8);
 	}
 
 	private static byte[] _encryptRequest(String serverURL, String request)
@@ -598,16 +581,15 @@ public class LicenseUtil {
 		if (serverURL.startsWith(Http.HTTPS)) {
 			return bytes;
 		}
-		else {
-			JSONObject jsonObject = JSONFactoryUtil.createJSONObject();
 
-			bytes = Encryptor.encryptUnencoded(_symmetricKey, bytes);
+		JSONObject jsonObject = JSONFactoryUtil.createJSONObject();
 
-			jsonObject.put("content", Base64.objectToString(bytes));
-			jsonObject.put("key", _encryptedSymmetricKey);
+		bytes = Encryptor.encryptUnencoded(_symmetricKey, bytes);
 
-			return jsonObject.toString().getBytes(StringPool.UTF8);
-		}
+		jsonObject.put("content", Base64.objectToString(bytes));
+		jsonObject.put("key", _encryptedSymmetricKey);
+
+		return jsonObject.toString().getBytes(StringPool.UTF8);
 	}
 
 	private static Map<String, String> _getOrderProducts(
@@ -635,7 +617,7 @@ public class LicenseUtil {
 	}
 
 	private static void _initKeys() {
-		ClassLoader classLoader = PACLClassLoaderUtil.getPortalClassLoader();
+		ClassLoader classLoader = ClassLoaderUtil.getPortalClassLoader();
 
 		if ((classLoader == null) || (_encryptedSymmetricKey != null)) {
 			return;
@@ -713,17 +695,15 @@ public class LicenseUtil {
 	private static final String _PROXY_USER_NAME = GetterUtil.getString(
 		PropsUtil.get("license.proxy.username"));
 
-	private static Log _log = LogFactoryUtil.getLog(
-		DefaultLicenseManagerImpl.class);
+	private static Log _log = LogFactoryUtil.getLog(LicenseUtil.class);
 
 	private static String _encryptedSymmetricKey;
 	private static MethodHandler _getServerInfoMethodHandler =
 		new MethodHandler(new MethodKey(LicenseUtil.class, "getServerInfo"));
-	private static String _hostName;
 	private static Set<String> _ipAddresses;
 	private static Set<String> _macAddresses;
 	private static Pattern _macAddressPattern1 = Pattern.compile(
-		"\\s((\\p{XDigit}{2}(-|:)){5}(\\p{XDigit}{2}))(?:\\s|$)");
+		"\\s((\\p{XDigit}{1,2}(-|:)){5}(\\p{XDigit}{1,2}))(?:\\s|$)");
 	private static Pattern _macAddressPattern2 = Pattern.compile(
 		"\\s((\\p{XDigit}{1,2}(\\.)){5}(\\p{XDigit}{1,2}))(?:\\s|$)");
 	private static MethodKey _registerOrderMethodKey = new MethodKey(
